# FCAI-OPP-Assignment-1-Photo-Smith

./: CMakeLists.txt  PhotoSmith.pro
src/core/filters/: ImageFilters.cpp  ImageFilters.h
src/gui/: ColorWheelDialog.cpp  ColorWheelDialog.h  photo_smith.cpp
